[gd_scene load_steps=4 format=3 uid="uid://bi0hwjyalpjn6"]

[ext_resource type="Texture2D" uid="uid://doavl47vaddfj" path="res://resources/images/bullets/Enchanted_Sword/Enchanted_Beam.png" id="1_185ht"]
[ext_resource type="Script" path="res://scripts/bullets/enchanted_beam.gd" id="2_quqb1"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fb1sb"]
radius = 8.48529
height = 70.7107

[node name="EnchantedBeam" type="Area2D"]
position = Vector2(1152, 652)
scale = Vector2(1.5, 1.5)
script = ExtResource("2_quqb1")
direction = Vector2(-1, -1.5)
speed = 500.0
metadata/_edit_group_ = true

[node name="OutScreen" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-13.3333, 13.3333)
scale = Vector2(2, 2)
texture = ExtResource("1_185ht")
offset = Vector2(6.66667, -6.66666)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource("CapsuleShape2D_fb1sb")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="OutScreen" to="." method="_on_out_screen_screen_exited"]
